--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -17,14 +17,14 @@
     <meta name="twitter:creator" content="@" />
     <meta name="twitter:title" content="SkillCraft | An EdTech Website" />
     <meta name="twitter:description" content="SkillCraft - It is a Full Stack (MERN) Edtech website, build using React, Redux, tailwind, JS, NodeJs, MongoDB, Mongoose, CSS and HTML" />
-    <meta name="twitter:image" content="https://i.postimg.cc/DyfhmrtP/Study-Notion.png" />
+    <meta name="twitter:image" content="https://i.ibb.co/vkRqfTt/logo-yellow-email.png" />
 
     <!-- Facebook -->
-    <meta property="og:url" content="https://study-notion-mern-sunny8080.netlify.app/" />
-    <meta property="og:title" content="StudyNotion - Edtech Website | Sunny8080" />
-    <meta property="og:description" content="StudyNotion - It is Full Stack (MERN) Edtech website, build using React, Redux, tailwind, JS, NodeJs, MongoDB, Mongoose, CSS and HTML" />
+    <meta property="og:url" content="https://skill-craft.onrender.com/" />
+    <meta property="og:title" content="SkillCraft | An EdTech Website" />
+    <meta property="og:description" content="SkillCraft - It is a Full Stack (MERN) Edtech website, build using React, Redux, tailwind, JS, NodeJs, MongoDB, Mongoose, CSS and HTML" />
     <meta property="og:type" content="Edtech" />
-    <meta property="og:image" content="https://i.postimg.cc/DyfhmrtP/Study-Notion.png" />
+    <meta property="og:image" content="https://i.ibb.co/vkRqfTt/logo-yellow-email.png" />
     <meta property="og:image:type" content="image/jpg" />
   </head>
   <body>
